Feat: exec java